package br.edu.ifpb.baralhos;

public class BaralhoTradicional extends Baralho {
}
