package br.edu.ifpb.factory;

public enum TipoCarta {
    TRADICIONAL, UNO
}
